# api-test-challenge-dock

./: .env.dev  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  conftest.py  pytest.ini  requirements-dev.txt  requirements.txt
app/challenge/: settings.py  urls.py
app/core/: admin.py  routes.py
app/core/fixtures/: core.pessoas.json
app/core/migrations/: 0001_initial.py  0002_auto_20210210_2008.py  0003_auto_20210211_1122.py  0004_auto_20210211_1136.py  0005_transacao_tipo.py  0006_auto_20210212_1333.py
app/core/mixins/: data_criacao_mixin.py
app/core/models/: __init__.py  conta.py  pessoa.py  transacao.py
app/core/serializers/: conta.py  saldo.py  transacao.py
app/core/tests/: test_conta.py  test_transacao.py
app/core/viewsets/: conta.py  transacao.py
