[tool.poetry]
name = "challenge-dock"
version = "0.1.0"
description = "An API challenge for a company called Dock"
authors = ["Ayron Felipe <ayron41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
psycopg2-binary = "^2.8.5"
pip = "^21.0.1"
PyYAML = "^5.4.1"
uritemplate = "^3.0.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.1.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
